Fix gradient padding
This was on the todo for too much time

--- a/scss/style.css
+++ b/scss/style.css
@@ -120,6 +120,7 @@ body {
   font-family: 'Oleo Script', cursive;
   background-clip: text;
   padding-right: 0.8vmin;
+  padding-left: 1rem;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-animation: gradient 10s ease infinite;
